# pvr.demo

./: CMakeLists.txt
debian/: changelog  control  copyright
pvr.demo/: addon.xml
src/: PVRDemoData.cpp  PVRDemoData.h  client.cpp  client.h
